--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "highlight.js": "^11.2.0",
+    "marked": "^3.0.4",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
