--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "highlight.js": "^11.2.0",
-    "marked": "^3.0.4",
-    "next": "11.1.2",
+    "highlight.js": "^11.4.0",
+    "marked": "^4.0.12",
+    "next": "^12.1.0",
+    "node-localstorage": "^2.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2"
+    "eslint": "8.9.0",
+    "eslint-config-next": "12.0.10"
   }
 }
