--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev -p 4321",
     "build": "next build",
+    "prestart": "mkdir -p store",
     "start": "next start --port=80",
     "lint": "next lint"
   },
