--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@svgr/webpack": "^6.3.1",
     "highlight.js": "^11.4.0",
     "marked": "^4.0.12",
     "next": "^12.1.0",
