--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "^12.1.0",
     "node-localstorage": "^2.2.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "use-local-storage": "^2.3.6"
   },
   "devDependencies": {
     "eslint": "8.9.0",
