--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.3",
     "@svgr/webpack": "^6.3.1",
+    "graphql": "^16.6.0",
     "highlight.js": "^11.4.0",
     "marked": "^4.0.12",
     "next": "^12.1.0",
