--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@apollo/client": "^3.7.3",
     "@svgr/webpack": "^6.3.1",
+    "@types/recharts": "^1.8.24",
     "graphql": "^16.6.0",
     "highlight.js": "^11.4.0",
     "marked": "^4.0.12",
@@ -18,6 +19,7 @@
     "node-localstorage": "^2.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "recharts": "^2.3.2",
     "use-local-storage": "^2.3.6"
   },
   "devDependencies": {
