--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "^13.4.2",
     "node-localstorage": "^2.2.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sharp": "^0.32.1"
   },
   "devDependencies": {
     "eslint": "8.9.0",
