--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "luviz-blog",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
     "dev": "next dev -p 4321",
     "build": "next build",
