--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "luviz-blog",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
     "dev": "next dev -p 4321",
     "build": "next build",
@@ -12,13 +15,14 @@
     "@svgr/webpack": "^6.3.1",
     "highlight.js": "^11.4.0",
     "marked": "^4.0.12",
-    "next": "^12.1.0",
+    "next": "^13.4.2",
     "node-localstorage": "^2.2.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sharp": "^0.32.1"
   },
   "devDependencies": {
     "eslint": "8.9.0",
-    "eslint-config-next": "12.0.10"
+    "eslint-config-next": "^13.4.2"
   }
 }
