--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "highlight.js": "^11.4.0",
     "marked": "^4.0.12",
     "next": "^13.4.2",
+    "next-pwa": "^5.6.0",
     "node-localstorage": "^2.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
